# Trinity-

./: .gitignore  LICENSE  README.md  __init__.py  app.py  app.py.backup  core.py  nixpacks.toml  pyproject.toml  requirements.txt  setup.py
templates/: index.html
